test/data/golden/pass/forall_requires.sv0
fn main() -> i32 requires(forall(i in 0..4, i >= 0)) ensures(true) {
  return 0;
}
